<resources>
    <string name="app_name">The Folks</string>
    <string name="todo">todo</string>
    <string name="welcome_title">Smart People Smart Living</string>
    <string name="welcome_subtitle">Nikmati berbagai akses layanan publik di Indonesia dalam genggaman</string>
    <string name="get_started">Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="or">OR</string>
    <string name="login">Login</string>
    <string name="forget_password">Forget Password</string>
    <string name="password">Password</string>
    <string name="password_hint">*****</string>
    <string name="email_hint">youremailhere@gmail.com</string>
    <string name="email">Email</string>
    <string name="forget_hint">Enter your email to reset your password</string>
    <string name="send">Send</string>
    <string name="register_hint">Enter your email and set your password to register</string>
    <string name="register">Register</string>
    <string name="hello_there">Hello There.</string>
    <string name="login_or_sign_up_to_continue">Login or sign up to continue</string>
    <string name="take_an_e_ktp_photo">Take an e-KTP Photo</string>
    <string name="retake">Retake</string>
    <string name="use_this_photo">Use this photo</string>
    <string name="forget_success_message">We have sent you an email. Please check your email to reset your password.</string>
    <string name="register_success_message">Congratulations, your account has been successfully created.</string>
    <string name="error_message">Something went wrong.</string>
    <string name="review_ktp_title">Review your e-KTP photo</string>
    <string name="review_selfie_title">Review your selfie + e-KTP</string>
    <string name="review_ktp_subtitle">Make sure your e-KTP fits the photo area and is clear enough to be read. Your face must also fit in its frame.</string>
    <string name="review_selfie_subtitle">Remove your mask and fit your face within the photo area. Make sure it is clearly visible.</string>
    <string name="take_a_selfie_e_ktp">Take a selfie + e-KTP</string>
    <string name="upgrade_account">Upgrade Account</string>
    <string name="upload_your_id">1. Upload your ID</string>
    <string name="e_ktp">e-KTP</string>
    <string name="_1_e_ktp_is_valid_for_only_1_account">1 e-KTP is valid for only 1 account</string>
    <string name="your_information_will_remain_confidential_only_be_used_for_verification"><![CDATA[Your information will remain confidential & only be used for verification.]]></string>
    <string name="supervised_by_bangkit">Supervised by Bangkit</string>
    <string name="upload_your_selfie">2. Upload your selfie</string>
    <string name="we_ll_only_use_it_to_verify_your_personal_identification_now_flash_a_smile">We\'ll only use it to verify your personal identification. Now, flash a smile!</string>
    <string name="review_submit_your_photos"><![CDATA[3. Review & submit your photos]]></string>
    <string name="submit">Submit</string>
    <string name="selfie_e_ktp">Selfie + e-KTP</string>
    <string name="submit_your_bio">4. Submit your bio</string>
    <string name="nomor_induk_kependudukan_nik">Nomor Induk Kependudukan (NIK)</string>
    <string name="nama_lengkap_sesuai_ktp">Nama Lengkap (Sesuai KTP)</string>
    <string name="upgrade_success_message">Permohonan Anda berhasil kami terima.</string>
    <string name="home">Home</string>
    <string name="pocket">Pocket</string>
    <string name="e_money">E-Money</string>
    <string name="profile">Profile</string>
    <string name="kartu_layanan">Kartu Layanan</string>
    <string name="surat_izin_mengemudi_c">Surat Izin Mengemudi (C)</string>
    <string name="_1005_0304_000388">1005-0304-000388</string>
    <string name="wajib_pajak_npwp">Wajib Pajak (NPWP)</string>
    <string name="_93_057_598_0_000_000">93.057.598.0-000.000</string>
    <string name="bpjs">BPJS</string>
    <string name="_0001444427943">0001444427943</string>
    <string name="sim_card">SIM Card</string>
    <string name="telkomsel">Telkomsel</string>
    <string name="_0821_3477_2921">0821-3477-2921</string>
    <string name="xl_axiata">XL Axiata</string>
    <string name="_0818_2288_007">0818-2288-007</string>
    <string name="registrasi_baru">Registrasi Baru</string>
    <string name="masukkan_nomor_sim_card_yang_akan_diregistrasi">Masukkan nomor sim card yang akan diregistrasi</string>
    <string name="beranda">Beranda</string>
    <string name="nik">NIK</string>
    <string name="nama">Nama</string>
    <string name="ttl">Tempat Tanggal Lahir</string>
    <string name="alamat">Alamat</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="agama">Agama</string>
    <string name="status_perkawinan">Status Perkawinan</string>
    <string name="pekerjaan">Pekerjaan</string>
    <string name="kewarganegaraann">Kewarganegaraan</string>
    <string name="berlaku_ktp">Berlaku Hingga</string>
    <string name="tempat_pembuatan">Tempat dibuat</string>
    <string name="tanggal_pembuatan">Tanggal dibuat</string>
    <string name="tanggal_berakhir"> Tanggal Berakhir</string>
    <string name="fakes">Faskes Tingkat 1</string>
    <string name="tipe_sim"> SIM A</string>
    <string name="tinggi">Tinggi Badan</string>
    <string name="no_bpjs"> NO BPJS : 0XXXXX</string>
    <string name="no_sim"> NO SIM : 0XXXXXX</string>
    <string name="no_kip"> NO KIP : 0XXXXXX</string>
    <string name="no_kks"> NO KKS : 0XXXXXX</string>
    <string name="no_prakerja"> NO PRAKERJA : 0XXXXXXX</string>
    <string name="npwp"> NPWP : 0XXXXXX</string>

</resources>