<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E4E4E4"
    android:orientation="vertical"
    tools:context=".presentation.home.pocket.PocketFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingStart="12dp"
            android:paddingTop="18dp"
            android:paddingEnd="12dp"
            android:paddingBottom="12dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pocket"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingTop="24dp"
            android:paddingEnd="12dp"
            android:paddingBottom="24dp">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="0dp"
                app:strokeColor="#309CFF"
                app:strokeWidth="1dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#309CFF"
                        android:paddingStart="12dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="8dp"
                        android:text="@string/kartu_layanan"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/kartu_sim_c" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="12dp"
                            android:minHeight="120dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/surat_izin_mengemudi_c"
                                android:textColor="#454545"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_1005_0304_000388"
                                android:textColor="@android:color/secondary_text_light" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/kartu_npwp" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="12dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wajib_pajak_npwp"
                                android:textColor="#454545"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_93_057_598_0_000_000"
                                android:textColor="@android:color/secondary_text_light" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/kartu_bpjs" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="12dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/bpjs"
                                android:textColor="#454545"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_0001444427943"
                                android:textColor="@android:color/secondary_text_light" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardBackgroundColor="@color/white"
                app:cardElevation="0dp"
                app:strokeColor="#309CFF"
                app:strokeWidth="1dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#309CFF"
                        android:paddingStart="12dp"
                        android:paddingTop="8dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="8dp"
                        android:text="@string/sim_card"
                        android:textColor="@color/white" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/logo_telkomsel" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="12dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/telkomsel"
                                android:textColor="#454545"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_0821_3477_2921"
                                android:textColor="@android:color/secondary_text_light" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:padding="12dp">

                        <ImageView
                            android:layout_width="120dp"
                            android:layout_height="wrap_content"
                            android:adjustViewBounds="true"
                            android:contentDescription="@string/todo"
                            app:srcCompat="@drawable/logo_xl" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="12dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/xl_axiata"
                                android:textColor="#454545"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/_0818_2288_007"
                                android:textColor="@android:color/secondary_text_light" />
                        </LinearLayout>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/grey" />

                    <!--                    <LinearLayout-->
                    <!--                        android:layout_width="match_parent"-->
                    <!--                        android:layout_height="match_parent"-->
                    <!--                        android:orientation="horizontal"-->
                    <!--                        android:padding="12dp">-->

                    <!--                        <ImageView-->
                    <!--                            android:layout_width="120dp"-->
                    <!--                            android:layout_height="wrap_content"-->
                    <!--                            android:contentDescription="@string/todo"-->
                    <!--                            android:adjustViewBounds="true"-->
                    <!--                            app:srcCompat="@drawable/kartu_placeholder" />-->

                    <!--                        <LinearLayout-->
                    <!--                            android:layout_width="match_parent"-->
                    <!--                            android:layout_height="match_parent"-->
                    <!--                            android:layout_marginStart="12dp"-->
                    <!--                            android:orientation="vertical">-->

                    <!--                            <TextView-->
                    <!--                                android:layout_width="match_parent"-->
                    <!--                                android:layout_height="wrap_content"-->
                    <!--                                android:text="@string/registrasi_baru"-->
                    <!--                                android:textColor="#454545"-->
                    <!--                                android:textSize="18sp"-->
                    <!--                                android:textStyle="bold" />-->

                    <!--                            <TextView-->
                    <!--                                android:layout_width="match_parent"-->
                    <!--                                android:layout_height="wrap_content"-->
                    <!--                                android:text="@string/masukkan_nomor_sim_card_yang_akan_diregistrasi"-->
                    <!--                                android:textColor="@android:color/secondary_text_light" />-->
                    <!--                        </LinearLayout>-->
                    <!--                    </LinearLayout>-->

                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

    </ScrollView>
</LinearLayout>